--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -153,7 +153,7 @@ jobs:
           author_name: GitHub Actions
           author_email: 41898282+github-actions[bot]@users.noreply.github.com
           message: "👷 chore(sqlmap): add report for ${{ env.TARGET }}-${{ env.START_DATE }}-${{ env.START_TIMESTAMP }}"
-          add: "./reports/sqlmap/*"
+          add: "./reports/*"
           pull: "--rebase --autostash"
 
       # - name: Save Results
@@ -182,6 +182,15 @@ jobs:
         uses: thereisnotime/action-nikto@master
         with:
           url: "https://homolog-password-manager-api-e0f4d2b888e5.herokuapp.com/"
+
+      - name: Commit and push changes
+        uses: EndBug/add-and-commit@v9
+        with:
+          author_name: GitHub Actions
+          author_email: 41898282+github-actions[bot]@users.noreply.github.com
+          message: "👷 chore(nikto): add report for ${{ env.TARGET }}-${{ env.START_DATE }}-${{ env.START_TIMESTAMP }}"
+          add: "./reports/*"
+          pull: "--rebase --autostash"
         
       - name: Teste
         run: |
