#8 feat: add file report nikto

--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -181,6 +181,10 @@ jobs:
         with:
           name: Depcheck report
           path:  ${{github.workspace}}/reports
+      
+      - name: Create nikto report file
+        run: |
+          touch out.json
 
       - name: Scan with nikto
         uses: thereisnotime/action-nikto@master
