--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -190,7 +190,7 @@ jobs:
         uses: thereisnotime/action-nikto@master
         with:
           url: "https://hml-tcc-password-manager.vercel.app/"
-          additional_args: "-o /tmp/out.json"
+          additional_args: "-nossl -o /tmp/out.json"
 
       - name: Commit and push changes
         uses: EndBug/add-and-commit@v9
