--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -145,9 +145,7 @@ jobs:
         uses: thereisnotime/action-sqlmap@master
         with:
           url: ${{ env.TARGET }}
-          additional_args: |
-          "--batch --crawl=2 --random-agent --forms --level=5 --risk=3 --data='email=email@email.com&password=senha123' --output-format=html -o sqlmap_out.html"    
-          "--batch --crawl=2 --random-agent --forms --level=5 --risk=2 --data='email=email@email.com&password=senha123' --output-format=html -o sqlmap_out1.html"
+          additional_args: "--batch --crawl=2 --random-agent --forms --level=5 --risk=3 --data='email=email@email.com&password=senha123' --output-format=html -o sqlmap_out.html"    
 
       - name: Teste
         run: |
