--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -145,7 +145,7 @@ jobs:
         uses: thereisnotime/action-sqlmap@master
         with:
           url: ${{ env.TARGET }}
-          additional_args: "--batch --crawl=2 --random-agent --forms --level=5 --risk=3 --data='email=email@email.com&password=senha123' --output-format=html -o sqlmap_out.html"    
+          additional_args: "--batch --crawl=2 --random-agent --forms --level=5 --risk=3 --data='email=email@email.com&password=senha123' > sqlmap_out.txt"    
 
       - name: Teste
         run: |
@@ -168,7 +168,7 @@ jobs:
           git checkout develop
           current_date=$(date +%Y-%m-%d)
           rm -rf reports/sql_map/${current_date} && mkdir -p reports/sql_map/${current_date}
-          cp -R ${{github.workspace}}/sqlmap_out.html reports/sql_map/${current_date}/
+          cp -R ${{github.workspace}}/sqlmap_out.txt reports/sql_map/${current_date}/
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
           git push origin develop
