--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -135,8 +135,12 @@ jobs:
         run: |
           echo "START_DATE=$(date +'%d-%m-%YT%H-%M-%S-%Z')" >> $GITHUB_ENV
           echo "START_TIMESTAMP=$(date +'%s')" >> $GITHUB_ENV
-          TMP_TARGET="https://hml-tcc-password-manager.vercel.app/login"
+          TMP_TARGET="https://hml-tcc-password-manager.vercel.app/1"
           echo "TARGET=$TMP_TARGET" >> $GITHUB_ENV
+            
+      - name: Create empty sqlmap report file
+        run: |
+          touch sqlmap_out.json
 
       - name: Checkout
         uses: actions/checkout@v3
@@ -145,7 +149,7 @@ jobs:
         uses: thereisnotime/action-sqlmap@master
         with:
           url: ${{ env.TARGET }}
-          additional_args: "--batch --crawl=2 --random-agent --forms --level=5 --risk=3 --data='email=email@email.com&password=senha123' > sqlmap_out.txt"    
+          additional_args: "--batch --random-agent --level=5 --risk=3 --data='email=email@email.com&password=senha123' > sqlmap_out.txt"    
 
       - name: Teste
         run: |
@@ -184,13 +188,13 @@ jobs:
       
       - name: Create nikto report file
         run: |
-          touch out.json
+          touch nikto_out.json
 
       - name: Scan with nikto
         uses: thereisnotime/action-nikto@master
         with:
           url: "https://hml-tcc-password-manager.vercel.app/"
-          additional_args: "-nossl -o /tmp/out.json"
+          additional_args: "-nossl -o /tmp/nikto_out.json"
 
       # - name: Commit and push changes
       #   uses: EndBug/add-and-commit@v9
@@ -214,7 +218,7 @@ jobs:
           git checkout develop
           current_date=$(date +%Y-%m-%d)
           rm -rf reports/nikto/${current_date} && mkdir -p reports/nikto/${current_date}
-          cp -R ${{github.workspace}}/out.json reports/nikto/${current_date}/
+          cp -R ${{github.workspace}}/nikto_out.json reports/nikto/${current_date}/
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
           git push origin develop
