--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -149,7 +149,7 @@ jobs:
         uses: thereisnotime/action-sqlmap@master
         with:
           url: ${{ env.TARGET }}
-          additional_args: "--batch --random-agent --level=5 --risk=3 --data='email=email@email.com&password=senha123' > sqlmap_out.txt"    
+          additional_args: "--batch --random-agent --level=5 --risk=3 > sqlmap_out.txt"    
 
       - name: Teste
         run: |
