--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -190,6 +190,11 @@ jobs:
         run: |
           touch nikto_out.json
 
+      - name: Install Nikto
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y nikto
+
       - name: Set FAILURES variable in nikto.conf.default
         run: |
           FAILURE_NUMBER=30
