--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -195,6 +195,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y nikto
 
+      - name: Find nikto conf
+        run: |
+          find / -iname "nikto.conf.default"
+
       - name: Set FAILURES variable in nikto.conf.default
         run: |
           FAILURE_NUMBER=30
