#8 fix: find nikto conf

--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -197,7 +197,7 @@ jobs:
 
       - name: Find nikto conf
         run: |
-          find / -iname "nikto.conf.default"
+          sudo find / -iname "nikto.conf.default"
 
       - name: Set FAILURES variable in nikto.conf.default
         run: |
