--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -194,16 +194,16 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y nikto
-
-      - name: Find nikto conf
-        run: |
-          sudo find / -iname "nikto.conf.default"
-
-      - name: Set FAILURES variable in nikto.conf.default
+          
+      - name: Find and set FAILURES variable in nikto.conf.default
         run: |
           FAILURE_NUMBER=30
-          NIKTO_CONF_PATH="var/lib/nikto/nikto.conf.default"
-          sed -i "s/^FAILURES.*/FAILURES=$FAILURE_NUMBER/" $NIKTO_CONF_PATH
+          NIKTO_CONF_PATH=$(sudo find / -type f -name "nikto.conf.default" 2>/dev/null | head -n 1)
+          if [ -z "$NIKTO_CONF_PATH" ]; then
+            echo "nikto.conf.default not found"
+            exit 1
+          fi
+          sudo sed -i "s/^FAILURES.*/FAILURES=$FAILURE_NUMBER/" "$NIKTO_CONF_PATH"
 
       - name: Scan with nikto
         uses: thereisnotime/action-nikto@master
