#8 fix: ignore ssl

--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -197,7 +197,7 @@ jobs:
           
       - name: Find and set FAILURES variable in nikto.conf.default
         run: |
-          FAILURE_NUMBER=40
+          FAILURE_NUMBER=30
           NIKTO_CONF_PATH=$(sudo find / -type f -name "nikto.conf.default" 2>/dev/null | head -n 1)
           if [ -z "$NIKTO_CONF_PATH" ]; then
             echo "nikto.conf.default not found"
@@ -209,7 +209,7 @@ jobs:
         uses: thereisnotime/action-nikto@master
         with:
           url: "https://hml-tcc-password-manager.vercel.app/"
-          additional_args: "-ignore-ssl -o /tmp/nikto_out.json"
+          additional_args: "-nolimit -o /tmp/nikto_out.json -ssl -ignore-certificate-errors"
 
       # - name: Commit and push changes
       #   uses: EndBug/add-and-commit@v9
