--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -209,7 +209,8 @@ jobs:
         uses: thereisnotime/action-nikto@master
         with:
           url: "https://hml-tcc-password-manager.vercel.app/"
-          additional_args: "-nolimit -o /tmp/nikto_out.json -ssl -ignore-certificate-errors"
+          additional_args: "-Option FAILURES=0 -nolimit -o /tmp/nikto_out.json -ssl -ignore-certificate-errors"
+          # DEMAIS CONFIGURAÇÕES: https://github.com/sullo/nikto/wiki/Annotated-Option-List
 
       # - name: Commit and push changes
       #   uses: EndBug/add-and-commit@v9
