--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -39,153 +39,97 @@ jobs:
 
      # Ferramentas DAST
 
-     #ZAP BASELINE SCAN (290 estrelas)
-      - name: Checkout
-        uses: actions/checkout@v2
+    #  #ZAP BASELINE SCAN (290 estrelas)
+    #   - name: Checkout
+    #     uses: actions/checkout@v2
       
-      - name: ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.12.0
-        with:
-          token: ${{ secrets.TOKEN_GIT }}
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://hml-tcc-password-manager.vercel.app'
-          cmd_options: '-a' #indica ataque ativo, onde o zap tenta atuar como um atacante em busca de vulnerabilidades
-          allow_issue_writing: 'true'
-          #fail_action: 'true'
-          artifact_name: 'zap_baseline_scan'
+    #   - name: ZAP Baseline Scan
+    #     uses: zaproxy/action-baseline@v0.12.0
+    #     with:
+    #       token: ${{ secrets.TOKEN_GIT }}
+    #       docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+    #       target: 'https://hml-tcc-password-manager.vercel.app'
+    #       cmd_options: '-a' #indica ataque ativo, onde o zap tenta atuar como um atacante em busca de vulnerabilidades
+    #       allow_issue_writing: 'true'
+    #       #fail_action: 'true'
+    #       artifact_name: 'zap_baseline_scan'
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: zap_baseline_scan
-          path: |
-            ${{ github.workspace }}/report_html.html
-            ${{ github.workspace }}/report_md.md
-            ${{ github.workspace }}/report_json.json
+    #   - name: Upload artifact
+    #     uses: actions/upload-artifact@v4
+    #     with:
+    #       name: zap_baseline_scan
+    #       path: |
+    #         ${{ github.workspace }}/report_html.html
+    #         ${{ github.workspace }}/report_md.md
+    #         ${{ github.workspace }}/report_json.json
 
-      - name: Save Results
-        if: always()
-        run: |
-          git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
-          cd ${{secrets.NAME_REPO_GIT}}
-          git checkout develop
-          current_date=$(date +%Y-%m-%d)
-          rm -rf reports/zap_baseline_scan/${current_date} && mkdir -p reports/zap_baseline_scan/${current_date}
-          cp -R ${{github.workspace}}/report_html.html reports/zap_baseline_scan/${current_date}/
-          cp -R ${{github.workspace}}/report_json.json reports/zap_baseline_scan/${current_date}/
-          cp -R ${{github.workspace}}/report_md.md reports/zap_baseline_scan/${current_date}/
-          git add .
-          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
-          git push origin develop
+    #   - name: Save Results
+    #     if: always()
+    #     run: |
+    #       git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
+    #       cd ${{secrets.NAME_REPO_GIT}}
+    #       git checkout develop
+    #       current_date=$(date +%Y-%m-%d)
+    #       rm -rf reports/zap_baseline_scan/${current_date} && mkdir -p reports/zap_baseline_scan/${current_date}
+    #       cp -R ${{github.workspace}}/report_html.html reports/zap_baseline_scan/${current_date}/
+    #       cp -R ${{github.workspace}}/report_json.json reports/zap_baseline_scan/${current_date}/
+    #       cp -R ${{github.workspace}}/report_md.md reports/zap_baseline_scan/${current_date}/
+    #       git add .
+    #       git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
+    #       git push origin develop
 
           
-      - name: Remove reports 
-        run: |
-          rm report_html.html
-          rm report_md.md
-          rm report_json.json
+    #   - name: Remove reports 
+    #     run: |
+    #       rm report_html.html
+    #       rm report_md.md
+    #       rm report_json.json
 
-      #ZAP FULL SCAN (290 estrelas)
-      - name: Checkout
-        uses: actions/checkout@v2
+    #   #ZAP FULL SCAN (290 estrelas)
+    #   - name: Checkout
+    #     uses: actions/checkout@v2
       
-      - name: ZAP Full Scan
-        uses: zaproxy/action-full-scan@v0.10.0
-        with:
-          token: ${{ secrets.TOKEN_GIT }}
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://hml-tcc-password-manager.vercel.app'
-          cmd_options: '-a'
-          allow_issue_writing: 'true'
-          #fail_action: 'true'
-          artifact_name: 'zap_full_scan'
+    #   - name: ZAP Full Scan
+    #     uses: zaproxy/action-full-scan@v0.10.0
+    #     with:
+    #       token: ${{ secrets.TOKEN_GIT }}
+    #       docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+    #       target: 'https://hml-tcc-password-manager.vercel.app'
+    #       cmd_options: '-a'
+    #       allow_issue_writing: 'true'
+    #       #fail_action: 'true'
+    #       artifact_name: 'zap_full_scan'
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: zap_full_scan
-          path: |
-            ${{ github.workspace }}/report_html.html
-            ${{ github.workspace }}/report_md.md
-            ${{ github.workspace }}/report_json.json
+    #   - name: Upload artifact
+    #     uses: actions/upload-artifact@v4
+    #     with:
+    #       name: zap_full_scan
+    #       path: |
+    #         ${{ github.workspace }}/report_html.html
+    #         ${{ github.workspace }}/report_md.md
+    #         ${{ github.workspace }}/report_json.json
 
-      - name: Save Results
-        if: always()
-        run: |
-          git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
-          cd ${{secrets.NAME_REPO_GIT}}
-          git checkout develop
-          current_date=$(date +%Y-%m-%d)
-          rm -rf reports/zap_full_scan/${current_date} && mkdir -p reports/zap_full_scan/${current_date}
-          cp -R ${{github.workspace}}/report_html.html reports/zap_full_scan/${current_date}/
-          cp -R ${{github.workspace}}/report_json.json reports/zap_full_scan/${current_date}/
-          cp -R ${{github.workspace}}/report_md.md reports/zap_full_scan/${current_date}/
-          git add .
-          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
-          git push origin develop
+    #   - name: Save Results
+    #     if: always()
+    #     run: |
+    #       git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
+    #       cd ${{secrets.NAME_REPO_GIT}}
+    #       git checkout develop
+    #       current_date=$(date +%Y-%m-%d)
+    #       rm -rf reports/zap_full_scan/${current_date} && mkdir -p reports/zap_full_scan/${current_date}
+    #       cp -R ${{github.workspace}}/report_html.html reports/zap_full_scan/${current_date}/
+    #       cp -R ${{github.workspace}}/report_json.json reports/zap_full_scan/${current_date}/
+    #       cp -R ${{github.workspace}}/report_md.md reports/zap_full_scan/${current_date}/
+    #       git add .
+    #       git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
+    #       git push origin develop
 
-      - name: Remove reports 
-        run: |
-          rm report_html.html
-          rm report_md.md
-          rm report_json.json
+    #   - name: Remove reports 
+    #     run: |
+    #       rm report_html.html
+    #       rm report_md.md
+    #       rm report_json.json
 
-      # SQL MAP
-      - name: Prepare environment
-        run: |
-          echo "START_DATE=$(date +'%d-%m-%YT%H-%M-%S-%Z')" >> $GITHUB_ENV
-          echo "START_TIMESTAMP=$(date +'%s')" >> $GITHUB_ENV
-          TMP_TARGET="https://hml-tcc-password-manager.vercel.app/1"
-          echo "TARGET=$TMP_TARGET" >> $GITHUB_ENV
-            
-      - name: Create empty sqlmap report file
-        run: |
-          touch sqlmap_out.txt
-
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      # - name: Scan with sqlmap
-      #   uses: thereisnotime/action-sqlmap@master
-      #   with:
-      #     url: ${{ env.TARGET }}
-      #     additional_args: "--batch --random-agent --level=5 --risk=3 > sqlmap_out.txt"    
-
-      - name: Teste
-        run: |
-          ls 
-
-      # - name: Commit and push changes
-      #   uses: EndBug/add-and-commit@v9
-      #   with:
-      #     author_name: GitHub Actions
-      #     author_email: 41898282+github-actions[bot]@users.noreply.github.com
-      #     message: "👷 chore(sqlmap): add report for ${{ env.TARGET }}-${{ env.START_DATE }}-${{ env.START_TIMESTAMP }}"
-      #     add: "./reports/*"
-      #     pull: "--rebase --autostash"
-
-      # - name: Save Results
-      #   if: always()
-      #   run: |
-      #     git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
-      #     cd ${{secrets.NAME_REPO_GIT}}
-      #     git checkout develop
-      #     current_date=$(date +%Y-%m-%d)
-      #     rm -rf reports/sql_map/${current_date} && mkdir -p reports/sql_map/${current_date}
-      #     cp -R ${{github.workspace}}/sqlmap_out.txt reports/sql_map/${current_date}/
-      #     git add .
-      #     git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
-      #     git push origin develop
-
-      - name: Checkout
-        uses: actions/checkout@v2
-      
-      - name: Upload Test results
-        uses: actions/upload-artifact@v4
-        with:
-          name: Depcheck report
-          path:  ${{github.workspace}}/reports
-      
       - name: Create nikto report file
         run: |
           touch nikto_out.json
@@ -209,7 +153,7 @@ jobs:
         uses: thereisnotime/action-nikto@master
         with:
           url: "https://hml-tcc-password-manager.vercel.app/"
-          additional_args: "-Option FAILURES=0 -nolimit -o /tmp/nikto_out.json -ssl -ignore-certificate-errors"
+          additional_args: "-Option FAILURES=0 -o /tmp/nikto_out.json"
           # DEMAIS CONFIGURAÇÕES: https://github.com/sullo/nikto/wiki/Annotated-Option-List
 
       # - name: Commit and push changes
