--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -132,7 +132,7 @@ jobs:
 
       - name: Create nikto report file
         run: |
-          touch ${{ runner.workspace }}/nikto_out.json
+          touch ${{ github.workspace }}/nikto_out.json
 
       - name: Create nikto report file
         run: |
@@ -142,14 +142,14 @@ jobs:
         uses: thereisnotime/action-nikto@master
         with:
           url: "https://hml-tcc-password-manager.vercel.app/"
-          additional_args: "-Option FAILURES=5 -o ${{ runner.workspace }}/nikto_out.json -Format json"
+          additional_args: "-Option FAILURES=5 -o ${{ github.workspace }}/nikto_out.json -Format json"
           # DEMAIS CONFIGURAÇÕES: https://github.com/sullo/nikto/wiki/Annotated-Option-List
 
       - name: Upload Nikto Report
         uses: actions/upload-artifact@v2
         with:
           name: nikto-report
-          path: ${{ runner.workspace }}/nikto_out.json
+          path: ${{ github.workspace }}/nikto_out.json
 
       # - name: Commit and push changes
       #   uses: EndBug/add-and-commit@v9
