#8 fix: fix nikto

--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -133,6 +133,7 @@ jobs:
       - name: Create nikto report file
         run: |
           touch ${{ github.workspace }}/nikto_out.json
+          chmod 644 ${{ github.workspace }}/nikto_out.json
 
       - name: Create nikto report file
         run: |
