#8 fix: fix nikto

--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -139,16 +139,12 @@ jobs:
       #   run: |
       #     pwd nikto_out.json
 
-      - name: Criando diretório para output nikto
-        run: |
-          mkdir -p ${{ runner.workspace }}/nikto_reports
-          chmod 777 ${{ runner.workspace }}/nikto_reports  
 
       - name: Scan with nikto
         uses: thereisnotime/action-nikto@master
         with:
           url: "https://hml-tcc-password-manager.vercel.app/"
-          additional_args: "-Option FAILURES=5 -o ${{ runner.workspace }}/nikto_reports/nikto_out.json -Format json"
+          additional_args: "-Option FAILURES=5 -root -o /tmp/nikto_out.json -Format json"
           # DEMAIS CONFIGURAÇÕES: https://github.com/sullo/nikto/wiki/Annotated-Option-List
 
       - name: Upload Nikto Report
