--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -133,13 +133,18 @@ jobs:
       - name: Create nikto report file
         run: |
           touch ${{ github.workspace }}/nikto_out.json
+          chmod o+w ${{ github.workspace }}/nikto_out.json
 
       - name: Verificar permissões do diretório
         run: ls -la ${{ github.workspace }}
 
       - name: Verificar permissões do arquivo
         run: ls -la ${{ github.workspace }}/nikto_out.json
-        
+
+      - name: Set permissions
+        run: |
+          sudo chown -R runner:runner ${{ github.workspace }}
+
       - name: Scan with nikto
         uses: thereisnotime/action-nikto@master
         with:
