#8 fix: fix nikto

--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -133,12 +133,14 @@ jobs:
       - name: Verificar permissões do diretório
         run: |
           chmod o+w ${{ github.workspace }}
+          chmod g+w ${{ github.workspace }}
           ls -la ${{ github.workspace }}
 
       - name: Create nikto report file
         run: |
           touch ${{ github.workspace }}/nikto_out.json
           chmod o+w ${{ github.workspace }}/nikto_out.json
+          chmod g+w ${{ github.workspace }}/nikto_out.json
 
       - name: Verificar permissões do arquivo
         run: ls -la ${{ github.workspace }}/nikto_out.json
