--- a/.github/workflows/01-ci.yaml
+++ b/.github/workflows/01-ci.yaml
@@ -19,22 +19,15 @@ jobs:
         run: |
           git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
           git config --global user.name "${{secrets.GIT_USER_NAME}}"
-
-      # - name: Checkout Repository
-      #   uses: actions/checkout@v3
   
-      # NPM AUDIT
-      # - name: run npm audit
-      #   uses: oke-py/npm-audit-action@v2
-      #   with:
-      #     audit_level: low
-      #     create_issues: true
-      #     github_token: ${{ secrets.TOKEN_GIT }}
-      #     issue_labels: vulnerability
-
-      # Pensar se vamos manter
-      # - name: Build
-      #   run: docker-compose build 
+      NPM AUDIT
+      - name: run npm audit
+        uses: oke-py/npm-audit-action@v2
+        with:
+          audit_level: low
+          create_issues: true
+          github_token: ${{ secrets.TOKEN_GIT }}
+          issue_labels: vulnerability
 
       - name: install npm ci
         env:
