--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -133,21 +133,19 @@ jobs:
       - name: Create nikto report file
         run: |
           touch ${{ github.workspace }}/nikto_out.json
-          chmod o+w ${{ github.workspace }}/nikto_out.json
-          chmod g+w ${{ github.workspace }}/nikto_out.json
 
-      - name: Verificar permissões do diretório
-        run: |
-          chmod o+w ${{ github.workspace }}
-          chmod g+w ${{ github.workspace }}
-          ls -la ${{ github.workspace }}
+      # - name: Verificar permissões do diretório
+      #   run: |
+      #     chmod o+w ${{ github.workspace }}
+      #     chmod g+w ${{ github.workspace }}
+      #     ls -la ${{ github.workspace }}
 
-      - name: Verificar permissões do arquivo
-        run: ls -la ${{ github.workspace }}/nikto_out.json
+      # - name: Verificar permissões do arquivo
+      #   run: ls -la ${{ github.workspace }}/nikto_out.json
 
-      - name: Set permissions
-        run: |
-          sudo chown -R runner:runner ${{ github.workspace }}
+      # - name: Set permissions
+      #   run: |
+      #     sudo chown -R runner:runner ${{ github.workspace }}
 
       - name: Find absolute path of nikto_out.json
         id: find_file_path
