--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -1,9 +1,8 @@
-name: CD
+name: CD_HOMOLOG
 
-# Alterar depois pra branch main
-on: 
+on:
   push:
-    branches: [8-testar-workflow-ci-cd]
+    branches: [develop]
 
 defaults:
   run:
