--- a/.github/workflows/ci_sca_depcheck.yaml
+++ b/.github/workflows/ci_sca_depcheck.yaml
@@ -1,11 +1,8 @@
-name: CI
-
-# Alterar depois pra branch main
-# on: pull_request
+name: CI_SCA
 
 on:
-  push:
-    branches: [8-testar-workflow-ci-cd]
+  pull_request:
+    branches: [develop]
 
 jobs:
   sca_depcheck:
